--- a/src/index.scss
+++ b/src/index.scss
@@ -47,31 +47,30 @@ code {
   border-radius: 10px;
   padding: 2px;
   margin-left: 30px;
-  background-color: rgba(0, 0, 0, 0.1);
-  // Undo native button html styling
   border: 0;
   text-align: left;
+  background: transparent;
 
-  &.active {
-    background-color: unset;
-
+  &:not(.collapsed-layout) {
+    z-index: 1;
     &::after {
       opacity: 0;
     }
   }
 
-  &.ready {
+  &.ready.collapsed-layout {
     cursor: pointer;
+    background-color: rgba(0, 0, 0, 0.1);
 
     &::after {
       z-index: -2;
       content: '';
       position: absolute;
       // Sheen effect
-      top: -4px;
-      left: -4px;
-      bottom: -4px;
-      right: -4px;
+      top: 0px;
+      left: 0px;
+      bottom: 0px;
+      right: 0px;
       background-image: linear-gradient(
         240deg,
         $accent 70%,
